# cutil

./: .atom-build.json  .clang-tidy  .clang_complete  .editor-settings  .editorconfig  .envrc  .gitignore  Doxyfile  README.md  TODO  compile_flags.txt  meson.build  meson_options.txt
globals/: global.h  global_defs.h  global_mem.h
include/: ANSI-color-codes.h  carray.h  cdict.h  clist.h  cmemory.h  cprint_data.h  cstack.h  cstream.h  cutil.h  macros.h  meson.build  mybzero.h  mymemmove.h  sdict.h  sstring.h  types.h  uuid4.h
source/: carray.c  cdict.c  clist.c  cmemory.c  cprint_data.c  cstack.c  cstream.c  md5.c  mybzero.c  mymemmove.c  sstring.c
subprojects/: flatbuffers.wrap
tests/: meson.build  test_carray.c  test_carray_alt.c  test_cdict.c  test_mybzero.c  test_sstring.c
